assets/style/style.css
*{
    box-sizing: border-box;
    /* font-family: 'Heebo', sans-serif; */
    /* font-family: 'Montserrat', sans-serif; */
}



.nav{
    font-family: 'Montserrat', sans-serif;
    position: fixed;
    left: 0;
    top: 50%;
    width: auto;
    margin-top: -2.5em;
    z-index: 2;
    background-color: salmon;
    text-transform: uppercase;
    letter-spacing: 2px;

} 

#nav-item{
    font-family: 'Montserrat', sans-serif;
    font-size: 10pt; 
    font-weight: 500;
    padding: 16px;
}

.about{
   padding-top:100px;
   margin: auto;
   width: 60%;
   padding-bottom:80px;
}


#nav-item:hover{
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    font-size: 10pt;
    padding-left: 16px;
    transition: all 500ms;
    border-left: 8px solid black;
    color: black;
}

p{
    font-family: 'Heebo', sans-serif;
    font-weight: 900;
    font-size: 64pt;
}

a{
    color:salmon;
}

.projects{
    display: flex;
    flex-direction: column;
    margin: auto;
    width: 60%;
    /* border: 3px solid green; */
    padding: 10px;
}

.contact{
    background-color: grey;
    height: 980px;
}


img{
    padding-right: 64px;
    /* padding-left: 64px; */
    padding-top: 24px;
    padding-bottom: 60px;
    max-width: 100%;
    max-height: 100%;
}

.project-left{
    position: relative;
    border: 2px solid salmon;
    display: flex;
}

/* .project-image{
     position: relative;
     border: 2px solid salmon;
} */




.view-project{
    border: 5px solid salmon;
    height: 200px;
}

h4{
    /* border: 5px solid salmon; */
    font-size: 64pt !important;
    position: absolute;
    width: 100%;
    margin: 0;
    padding-right: 20px;
    bottom: 0px;
    right: 20px;
    display: block;
    text-align: right;
    letter-spacing: -0.03em;
    line-height: 0.80em;
    padding-top: 64px;
    font-family: 'Heebo', sans-serif;
    font-weight: 900 !important;
}

.info{
    transform: rotate(-90deg);
    transform-origin: 100% 0;
    position: absolute;
    bottom: 540px;
    right: 55px;
    text-transform: uppercase;
    font-family: 'Montserrat', sans-serif;
    /* font-size: 10pt;  */
    font-size: .75em;
    font-weight: 500;
    letter-spacing: 2px;
}


.buttons{
    display:flex;
    /* border: 2px solid salmon; */
    /* justify-content: flex-end; */
    align-items: flex-start;
    flex-direction: row;
    justify-content: start;
    position: absolute;
    height: 100%;
    width: 40%;
}

#proj-1, #git-1{
    margin: 24px;
    width: 100%;
    padding-left: 0;
    margin: 0;
    margin-bottom: 24px;
    border-radius: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 26px;
    padding-right: 26px;
    /* margin-right: 0; */
}

/* #git-1{
    margin: 24px;
} */

.buttons::hover{
    display: block;
}

